--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-animated-text-builders": "^1.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-typical": "^0.1.3",
